--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation project(path: ':porcupine')
     implementation project(path: ':porcupineManager')
+    implementation project(":lib")
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
